--- a/assignment.html
+++ b/assignment.html
@@ -2,21 +2,33 @@
 <html>
 
 <head>
-<title>WHO AM I?</title>
+<title>WHO IS CRONNIE?</title>
 <head>
 
 <body style="background-color:powderblue;">
-<h1 style="text-aligned:centered;">WHO AM I?</h1>
+<h1 style="text-aligned:centered;">WHO AM CRONNIE?</h1>
 <img src="https://storage.cloudconvert.com/tasks/b99a196e-b827-4d0c-bb7f-f66b89608bf9/IMG-20220524-WA0095%5B1%5D.jpg?AWSAccessKeyId=cloudconvert-production&Expires=1655885692&Signature=OA5EYFYiEjcWxaXxtz%2F8p%2FiL%2FEY%3D&response-content-disposition=attachment%3B filename%3D%22IMG-20220524-WA0095%5B1%5D.jpg%22&response-content-type=image%2Fjpeg"alt="A picture of Cronnie Owomugisha"width="100"height=100">
 <p><b>Cronnie Owomugisha</b> is a first year student offering software engineering at Makerere University.</p>
 <br>She is a from a humble background with both parents into education as a profession.
 <br>She is from a family of five and is the <strong>first born</strong>.
+<br>She is a former swimmer and currently heavily involved in basketball.She has been in a single sex school all her highschool life.
+<p>She was given a chance to play on the national team buh was forced to decline the offer due to some health complications<br> that she developed.</p>
+<br>She later joined the drama club in school where she undertook serious stigma.
+<p>Putting all the hustles aside, she is a free-spirited being.
 <hr>
 <h2>HOBBIES</h2>
-<p>She is passionate about <i>singing</i>.</p><img src="https://storage.cloudconvert.com/tasks/b3da059f-1b1e-4299-83dc-11773c963f84/singing violence.jpg.jpg?AWSAccessKeyId=cloudconvert-production&Expires=1655834581&Signature=bzTsFG58MBS7suUZgn0RSCIRJe0%3D&response-content-disposition=attachment%3B filename%3D%22singing violence.jpg.jpg%22&response-content-type=image%2Fjpeg"alt="picture of Cronnie singing"width="200"height="250">
-<p>She loves eating.</p><img src="https://storage.cloudconvert.com/tasks/fcd55ca8-829b-4c8a-8b6c-57b0512e8663/food justice.jpg?AWSAccessKeyId=cloudconvert-production&Expires=1655834891&Signature=OXXzgQ2D1txREEFFgXa4WHHfSlA%3D&response-content-disposition=attachment%3B filename%3D%22food justice.jpg%22&response-content-type=image%2Fjpeg"alt="picture of Cronnie eating"width="200"height="200">
-<br><p>She anchors once in a while for a church youtube channel.</p>
-<a title="cronnie anchoring" href="https://youtu.be/SAGl_wS3aRM">tap here</a>
+<p>She is passionate about <i>singing</i>.</p>
+<br>She is inspired by artistes like <em> Don Moen</em>,Ada and other <del>gospel</del> artistes.
+<br>She joined the church choir for fun and keeps developing in high spirits.
+<p>She loves eating.</p>
+<br><q>Don't get me started on food as a topic!</q><abbr title="laughes out loud">LOL</abbr>
+<br>Yap!She loves <del>food</del> junk.It fuels that bright pearly white smile you saw up there.
+<p>Did I forget to add she loves being infront of that camera?</p>Yes, she does!
+<br>She is a natural henceforth she anchors once in a while for a church youtube channel.
+<p><a title="cronnie anchoring" href="https://youtu.be/SAGl_wS3aRM">small sample</a></p>
+<p>Of course,I have pictures to backup my facts.</p>
+<br><a href="proof.html">proof</a>
+
 <br><form action="mailto:cronnieowomugisha8@gmail.com"method="POST">
 <br>name<br><input type="text" name=""id="">
 <br><input type="submit">
