--- a/assignment.html
+++ b/assignment.html
@@ -6,12 +6,30 @@
 <head>
 
 <body style="background-color:powderblue;">
-<h1 style="text-aligned:centered;">WHO AM CRONNIE?</h1>
+<h1 style="text-aligned:centered;">WHO IS CRONNIE?</h1>
 <img src="https://storage.cloudconvert.com/tasks/b99a196e-b827-4d0c-bb7f-f66b89608bf9/IMG-20220524-WA0095%5B1%5D.jpg?AWSAccessKeyId=cloudconvert-production&Expires=1655885692&Signature=OA5EYFYiEjcWxaXxtz%2F8p%2FiL%2FEY%3D&response-content-disposition=attachment%3B filename%3D%22IMG-20220524-WA0095%5B1%5D.jpg%22&response-content-type=image%2Fjpeg"alt="A picture of Cronnie Owomugisha"width="100"height=100">
 <p><b>Cronnie Owomugisha</b> is a first year student offering software engineering at Makerere University.</p>
 <br>She is a from a humble background with both parents into education as a profession.
-<br>She is from a family of five and is the <strong>first born</strong>.
-<br>She is a former swimmer and currently heavily involved in basketball.She has been in a single sex school all her highschool life.
+<br>She is from a family of four children and is the <strong>first born</strong>.
+<br><table>
+<table border="1" style="height:100px;width:200px">
+<tbody>
+<tr>
+  <td>Cronnie</td>
+</tr>
+<tr>
+  <td>Carlos</td>
+</tr>
+<tr>
+  <td>Cathy</td>
+</tr>
+<tr>
+  <td>Cowrie</td>
+</tr>
+</tbody>
+</table>
+<caption>table of children in order</table>
+<p>She is a former swimmer and currently heavily involved in basketball.She has been in a single sex school all her highschool life.</p>
 <p>She was given a chance to play on the national team buh was forced to decline the offer due to some health complications<br> that she developed.</p>
 <br>She later joined the drama club in school where she undertook serious stigma.
 <p>Putting all the hustles aside, she is a free-spirited being.
